# stromzaehler

mc/RPiPico/: zaehler.py
receiver/smlreceiver/: .gitignore  CMakeLists.txt
receiver/smlreceiver/smlreceive/: CMakeLists.txt  Middleware.cpp  ReadMessage.cpp  ReadMessage.h  azureiothub.cpp  azureiothub.h  cmdlineopts.cpp  cmdlineopts.h  smlreceive.cpp  smlreceive.h  utils.cpp  utils.h
web/: get_WP_json.php  test.html
web/style/: style2.css
